--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,8 @@
         <h2>My personal blog posts</h2>
         <nav>
             <ul>
-                <li><a href="2020/02/08/my-first-time-0f-writing-a-blog.html">My first time of writing a blog</a></li>
-                <li><a href="2020/02/08/my-diary.html">My diary</a></li>
-                <li><a href="2020/02/08/my-study.html">My study</a></li>
-                <li><a href="2020/02/14/my-second-year.html">My second year</a></li>
+                <li><a href="my-first-time-0f-writing-a-blog.html">My first time of writing a blog</a></li>
+                <li><a href="my-diary.html">My diary</a></li>
+                <li><a href="my-study.html">My study</a></li>
+                <li><a href="my-second-year.html">My second year</a></li>
             </ul>
