my-first-time-of-writing-a-blog.html

--- a/my-first-time-of-writing-a-blog.html
+++ b/my-first-time-of-writing-a-blog.html
@@ -80,7 +80,7 @@
             <h4 style="color: black">
                 At this time, my study is getting better. Thanks to all sophisticated
                 staff at ONJA because without them I would never be on tihis stage now.
-                 Thank you very much for your devoting yourself to reading my blog.
+                 Thank you very much for devoting yourself to reading my blog.
             </h4>
             <h4>
                 <img src="onja.png" alt="my image">
