--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <h2>My personal blog posts</h2>
         <nav>
             <ul>
-                <li><a href="my-first-time-0f-writing-a-blog.html">My first time of writing a blog</a></li>
+                <li><a href="my-first-blog.html">My first time of writing a blog</a></li>
                 <li><a href="my-diary.html">My diary</a></li>
                 <li><a href="my-study.html">My study</a></li>
                 <li><a href="my-second-year.html">My second year</a></li>
             </ul>
+        </nav>
+    </body>
+</html>
