--- a/my-first-blog.html
+++ b/my-first-blog.html
@@ -97,7 +97,7 @@
             </a>
         </p>
         <p>
-            <a href="index.html">
+            <a href="../index.html">
                 Go back to index.
             </a>
         </p>
