My_study_at_onja.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li><a href="my-first-blog.html">My first time of writing a blog</a></li>
+                <li><a href="My_study_at_onja.html">My study at onja</a></li>
                 <li><a href="my-diary.html">My diary</a></li>
-                <li><a href="my-study.html">My study</a></li>
                 <li><a href="my-second-year.html">My second year</a></li>
             </ul>
         </nav>
