--- a/my-first-blog.html
+++ b/my-first-blog.html
@@ -55,6 +55,7 @@
                 who can't go to university but still want to study.We studyed english
                 last year up to now, but this year we focus more on coding.
                 <img src="onja_crew.webp" alt="my image">
+                <a href="My_study_at_onja.html">My study at onja</a>
             </h4>
         </section>
         <section>
@@ -97,7 +98,7 @@
             </a>
         </p>
         <p>
-            <a href="../index.html">
+            <a href="index.html">
                 Go back to index.
             </a>
         </p>
