My_study_at_onja.html

--- a/My_study_at_onja.html
+++ b/My_study_at_onja.html
@@ -31,7 +31,7 @@
     <main>
       <section>
         <h2 style="color:brown">
-            After I've just got my baccalaureat
+          After I've just got my baccalaureat
         </h2>
         Once I've got my baccalaureat on 2015, I had to stop my study. It was an unexpected circumstance for me because I still wanted to keep up studying. This is because, my parents couldn't afford my study at the university anymore and all my simblins were still studying at this time. So I had to help them to take care of my brothers and my sisters. In addition, my parents worked far away from Andilamena, where we live, so I had to substitute their places as parents, instead. Meanwhile, I had to look for a job, but during two years I was still a jobless. So I worked as an assistant carptanter with my uncle for those two years. It seemed to me that there was no point for spending sixteen years to study at school, but I didn't have anything to do after that. I still tryed not to give up. An amazing oportunity lead me to open my way for my future life.
       </section>
@@ -56,7 +56,7 @@
     <footer>
       <h3>
         More  information please email me
-        <a href="Rak.hajaspers@gmail.com">Rak.hajaspers</a>
+        <a href="https://rak.hajaspers@gmail.com">Rak.hajaspers</a>
       </h3>
       <h3>
         <a href="index.html">Go back to index→</a>
