--- a/my-first-blog.html
+++ b/my-first-blog.html
@@ -93,7 +93,7 @@
     </main>
     <footer>
         <p>
-            <a href="Rak.hajaspers@gmail.com">
+            <a href="https://rak.hajaspers@gmail.com">
                 For more information, Please email me.
             </a>
         </p>
