My_study_at_onja.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="my-first-blog.html">My first time of writing a blog</a></li>
                 <li><a href="My_study_at_onja.html">My study at onja</a></li>
-                <li><a href="my-diary.html">My diary</a></li>
+                <li><a href="my-family.html">My family</a></li>
                 <li><a href="my-second-year.html">My second year</a></li>
             </ul>
         </nav>
