--- a/My_study_at_onja.html
+++ b/My_study_at_onja.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>
-        My 
+        My study at ONJA
     </title>
     <style>
         img {
@@ -54,10 +54,6 @@
       </section>
     </main>
     <footer>
-      <h3>
-        More  information please email me
-        <a href="https://rak.hajaspers@gmail.com">Rak.hajaspers</a>
-      </h3>
       <h3>
         <a href="index.html">Go back to index→</a>
       </h3>
