--- a/my-family.html
+++ b/my-family.html
@@ -35,7 +35,7 @@
         </h2>
         <ul>
           <li>
-            I don't have a large family but I'm really glad to tell you about them. My father is Francois Valentin Jacquit. He is from Toliara, in the south of Madagascar, and born there. He is a farmer. My mother's name is Rasoarinjaina Fanjarivelina and she is from Amparafaravola, in Alaotra Mangoro region. She is a teacher since 2008 until now and teaching in small village called Maromandia at the moment, about 8km from Andilamena. Because of this location, she has to walk for two hours and half to go toand from this place.
+            I don't have a large family but I'm really glad to tell you about them. I'd like to start it by telling about my father. My father is Francois Valentin Jacquit. He is from Toliara, in the south of Madagascar, and born there. He is a farmer. He is a confident and friendly father, that's why . My mother's name is Rasoarinajaina Fanjarivelina and she is from Amparafaravola, a district in Alaotra Mangoro region. She is a teacher since 2008 until now and teaching in small village called Maromandia at the moment, about 8km from Andilamena. It's a bit tiring for her to work in this place, because she has to walk for two hours and half to go to and from this place everyday. However, she is trying hard to do that even though she is getting old now. She is a good example for me. I'm really proud still having them. they are my strengh.
           </li>
           <li>
             THey both are living in Andilamena now, a little twon in the north of Alaotra Mangoro. We have been living in this place since 1992, when my father came fisrt there. I really love this place because it's surronded by green spaces. It has a lot of resource natural.
@@ -48,7 +48,7 @@
         </h3>
         <ul>
           <li>
-            I have six siblings, four brothers and two sisters. They all are still young. I'm the youngest among us, the first child of my parents. Franco is eighteen, my first brother, who is studying at the university now. Francisca is sixteen, the second and he is studying in high school, but my third brother called Francio is eleven, still in the middle school. My first sister is seven, called Francia, still in the primary school with my last brother called Vatosoa, who is five years old. Stellah is my last sister, born the same date as mine. That's all about my siblings.
+            I have six siblings, four brothers and two sisters. They all are still young. I'm the youngest among us, the first child of my parents. Franco is eighteen, my first brother, who is studying at the university in Tana now. He is really tall as me, but quite thin. Francisca is sixteen, my second brother and he is the same high as me. He is studying in high school in my village, but my third brother called Francio is eleven, still in the middle school. He is not tall, but a deligent brother and managing to work hard at home. I have a little sister, seven years old called Francia, still in the primary school with my last brother called Vatosoa, who is five years old. Stellah is my last sister, born in 2018, the same date as mine. That's all about my siblings.
           </li>
         </ul>
       </section>
@@ -56,13 +56,13 @@
         <h3 style="color: blue;">
           About me
         </h3>
-        <ul>
-          <li>
-            My name is Ratongamanahaja Francois Valentino Jacquit. I'm from Andilamena, but studying in Mahanoro. I'm twenty three years old now, born in 1996.I've been studying for many years in my village, but I'm stil studying at ONJA school now. That's all what I can you about myself.
-          </li>
       </section>
     </main>
     <footer>
+      <h3>
+        More information, please email me at
+      <a href ="mailto:rak.hajasper@mail.com?">Email</a>
+      </h3>
       <h3>
         <a href="index.html">Go back to index→</a>
       </h3>
