--- a/my_study_at_onja.html
+++ b/my_study_at_onja.html
@@ -55,6 +55,10 @@
     </main>
     <footer>
       <h3>
+        More information, please email me at
+      <a href ="mailto:rak.hajasper@mail.com?">Email</a>
+      </h3>
+      <h3>
         <a href="index.html">Go back to index→</a>
       </h3>
     </footer>
