--- a/my-first-blog.html
+++ b/my-first-blog.html
@@ -81,7 +81,7 @@
             <h4 style="color: black">
                 At this time, my study is getting better. Thanks to all sophisticated
                 staff at ONJA because without them I would never be on tihis stage now.
-                 Thank you very much for devoting yourself to reading my blog.
+                Thank you very much for devoting yourself to reading my blog.
             </h4>
             <h4>
                 <img src="onja.png" alt="my image">
@@ -92,11 +92,15 @@
         </section>
     </main>
     <footer>
-        <p>
+        <h3>
+            More information, please email me at
+            <a href="mailto:rak.hajasper@mail.com?">Email</a>
+        </h3>
+        <h3>
             <a href="index.html">
-                Go back to index.
+                Go back to index→
             </a>
-        </p>
+        </h3>
     </footer>
 </body>
 
