--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
         </title>
     </head>
     <body>
-        
         <h2>My personal blog posts</h2>
         <nav>
             <ul>
-                <li><a href="my-first-blog.html">My first time of writing a blog</a></li>
-                <li><a href="My_study_at_onja.html">My study at onja</a></li>
-                <li><a href="my-family.html">My family</a></li>
-                <li><a href="my-second-year.html">My second year</a></li>
+                <li><a href="blog.html">Blogs</a></li>
+                <li><a href="about_me.html">About_me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </body>
