--- a/about_me.html
+++ b/about_me.html
@@ -6,20 +6,37 @@
     <title>
         blog
     </title>
+    <link rel="stylesheet" href="css.css">
     <style>
-        img {
-            max-width: 100%
-        }
+      img {
+        max-width: 100%
+      }
 
-        section {
-            border: 1px solid #ccc;
-            padding: 0.1rem 1rem;
-            margin: 1rem 0;
-        }
-
-        section:target {
-            border-color: blue;
-        }
+      section {
+        border: 1px solid #ccc;
+        padding: 0.1rem 1rem;
+        margin: 1rem 0;
+      }
+      header {
+        background-color: purple;
+        color: #fff;
+        border-radius: .25rem;
+        font-weight: 800;
+        text-decoration: none;
+        transform: scale(1);
+        transition: transform .1s ease-out;
+      }
+      footer a {
+        display: inline-flexbox;
+        padding: .5rem 1rem;
+        color: #fff;
+        background-color: peru;
+        border-radius: .25rem;
+        font-weight: 800;
+        text-decoration: none;
+        transform: scale(1);
+        transition: transform .1s ease-out;
+      }
     </style>
   </head>
   <body>
