--- a/my-first-blog.html
+++ b/my-first-blog.html
@@ -1,107 +1,95 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device=width">
-    <title>
-        MY FIRST TIME ON LEARNING CODING
-    </title>
-    <style>
-        img {
-            max-width: 100%
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device=width">
+        <title>
+            MY FIRST TIME ON LEARNING CODING
+        </title>
+        <link rel="stylesheet" href="css.css">
+    </head>
 
-        section {
-            border: 1px solid #ccc;
-            padding: 0.1rem 1rem;
-            margin: 1rem 0;
-        }
-
-        section:target {
-            border-color: blue;
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <section>
-            <h1 style="color: blue;">
-                MY FIRST BLOG.
-            </h1>
-            <h2 style="color: rgb(255, 72, 0);">
-                Describing my self.
-            </h2>
-            <h4 style="color: black">
-                My name is jacquit and I'm 23 years old. I'm a student from Madagascar,
-                I'm writing this blog because I want to share to you some great points
-                that I've encountered in my study. Also I want to get any
-                suggestion from you for the things I still need to improve on this blog.
-                So please have a great time to read this blog.
-                <img src="1568793726191.jpg" alt="my image">
-            </h4>
-        </section>
-    </header>
-    <main>
-        <section>
-            <h2 style="color: rgb(255, 72, 0);">
-                About ONJA.
-            </h2>
-            <h4 style="color: black">
-                I'm studying at ONJA school, which is a NGO lead by SAM and located in
-                Mahanoro. We are twenty students at ONJA, to learn english and coding
-                with seven staff. This organisation is based on supporting the student
-                who can't go to university but still want to study.We studyed english
-                last year up to now, but this year we focus more on coding.
-                <img src="onja_crew.webp" alt="my image">
-                <a href="My_study_at_onja.html">My study at onja</a>
-            </h4>
-        </section>
-        <section>
-            <h2 style="color: rgb(255, 72, 0);">
-                At the beginning of my study.
-            </h2>
-            <h4 style="color: black">
-                Generally, I really love studying because I want to learn many
-                things. As far as I'm concerned, study assists me to have a better
-                life in the future as many students want. That's what I'm doing now.
-                However, at the beginning, I found it really hard to get started and to get
-                use to it, but in fact working hard pushed me to get over that. That's why,
-                I admit that nothing is easy on earth without
-                trying hard. Apart from that I had to change many things, including
-                the way of studying. Moreover, I needed to set up a new method of managing
-                time so that I can use my time wisely.
-            </h4>
-        </section>
-        <section>
-            <h2 style="color: rgb(255, 72, 0);">
-                At the moment.
-            </h2>
-            <h4 style="color: black">
-                At this time, my study is getting better. Thanks to all sophisticated
-                staff at ONJA because without them I would never be on tihis stage now.
-                Thank you very much for devoting yourself to reading my blog.
-            </h4>
-            <h4>
-                <img src="onja.png" alt="my image">
-            </h4>
-            <h2>
-                "Thank you very much ONJA".
-            </h2>
-        </section>
-    </main>
-    <footer>
-        <h3>
-            More information, please email me at
-            <a href="mailto:rak.hajasper@mail.com?">Email</a>
-        </h3>
-        <h3>
-            <a href="index.html">
-                Go back to index→
-            </a>
-        </h3>
-    </footer>
-</body>
+    <body>
+        <header>
+                <h1>
+                    MY FIRST BLOG
+                </h1>
+        </header>
+        <main>
+            <section id="section_serif">
+                <h2>
+                    Description of myself
+                </h2>
+                <p>
+                    My name is jacquit and I'm 23 years old. I'm a student from Madagascar,
+                    I'm writing this blog because I want to share to you some of the great points
+                    that I've encountered in my study. Also, I want to get any
+                    suggestion from you for the things I still need to improve on this blog.
+                    So please have a great time to read this blog.
+                </p>
+                <figure>
+                    <img src="1568793726191.jpg" alt="my image">
+                </figure>
+            </section>
+            <section id="section_monospace">
+                <h2>
+                    About ONJA
+                </h2>
+                <p>
+                    I'm studying at ONJA school, which is a NGO lead by SAM and located in
+                    Mahanoro. We are twenty students at ONJA, to learn english and coding
+                    with seven staff. This organisation is based on supporting the students
+                    who can't go to university but still want to study. We studyed english
+                    last year up to now, but this year we focus more on coding.
+                </p>
+                <figure>
+                    <img src="onja_crew.webp" alt="my image">
+                </figure>
+            </section>
+            <section id="section_fantasy">
+                <h2>
+                    At the beginning of my study
+                </h2>
+                <p>
+                    Generally, I really love studying, because I want to learn many
+                    things. As far as I'm concerned, study assists me to have a better
+                    life in the future as many students want. That's what I'm doing now.
+                    However, at the beginning, I found it really hard to get started of my study at onja and to get use to it, but in fact working hard pushed me to get over that. That's why, I admit that nothing is easy on earth without
+                    trying hard. Apart from that, I had to change many things in my life, including the way of studying. Moreover, I needed to dicsipline myself and set up a new method of managing time so that I can use my time wisely.
+                </p>
+            </section>
+            <section id="section_cursive">
+                <h2>
+                    At the moment
+                </h2>
+                <p>
+                    At this time, my study is getting better. Thanks to all sophisticated
+                    staff at ONJA, because without them I would never be on this stage now.
+                    Thank you very much for devoting yourself to reading my blog.
+                </p>
+                <figure>
+                    <img src="onja.png" alt="my image">
+                </figure>
+                <h2>
+                    "Thank you very much ONJA"
+                </h2>
+            </section>
+        </main>
+        <footer>
+            <p>
+                More information, please email me at
+                <a href="mailto:rak.hajasper@mail.com?"><b>Email</b></a>
+            </p>
+            <h3>
+                <a href="blog.html">Go back to blog→</a>
+            </h3>
+            <h3>
+                <a href="index.html">
+                    Go back to index→
+                </a>
+            </h3>
+        </footer>
+    </body>
 
 </html>
