--- a/my_study_at_onja.html
+++ b/my_study_at_onja.html
@@ -6,6 +6,7 @@
     <title>
         My study at ONJA
     </title>
+    <link rel="stylesheet" href="css.css">
     <style>
         img {
             max-width: 100%
@@ -56,7 +57,10 @@
     <footer>
       <h3>
         More information, please email me at
-      <a href ="mailto:rak.hajasper@mail.com?">Email</a>
+        <a href ="mailto:rak.hajasper@mail.com?">Email</a>
+      </h3>
+      <h3>
+        <a href="blog.html">Go back to blog→</a>
       </h3>
       <h3>
         <a href="index.html">Go back to index→</a>
