--- a/index.html
+++ b/index.html
@@ -4,15 +4,75 @@
         <title>
             MY FIRST BLOG
         </title>
+        <link rel="stylesheet" href="css.css">
+        <style>
+            body {
+              font-family: sans-serif;
+              font-size: 100%;
+              margin: 0;
+              display: flex;
+              flex-direction: column;
+              min-height: 100vh;
+              max-width: 50rem;
+              margin: 0 auto;
+              text-align: center;
+              box-shadow: 0 0 35px rgba(0,0,0,.2);
+            }
+            
+            header {
+                background-color: #366;
+                color: #fff;
+            }
+            
+            main {
+              background-color: floralwhite;
+              color: aquamarine;
+              flex-grow: 1;
+              display: flex;
+              flex-direction: column;
+            }
+            footer a {
+              display: inline-flexbox;
+              padding: .5rem 1rem;
+              color: #fff;
+              background-color: green;
+              border-radius: .25rem;
+              font-weight: 800;
+              text-decoration: none;
+              transform: scale(1);
+              transition: transform .1s ease-out;
+            }
+                </style>
     </head>
     <body>
-        <h2>My personal blog posts</h2>
-        <nav>
-            <ul>
-                <li><a href="blog.html">Blogs</a></li>
-                <li><a href="about_me.html">About_me</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <header>
+            <h1>
+                My personal blog posts
+            </h1>
+        </header>
+        <main>
+            <nav>
+                <h2>
+                    <a href="blog.html">
+                        Blogs
+                    </a>
+                </h2>
+                <h2>
+                    <a href="about_me.html">
+                        About_me
+                    </a>
+                </h2>
+                <h2>
+                    <a href="contact.html">
+                        Contact
+                    </a>
+                </h2>
+            </nav>
+        </main>
+        <footer>
+            <h3>
+            <a href ="mailto:rak.hajasper@mail.com?">Email me</a>
+            </h3>
+        </footer>
     </body>
 </html>
