updating my blog

--- a/about_me.html
+++ b/about_me.html
@@ -6,66 +6,41 @@
     <title>
         blog
     </title>
-    <link rel="stylesheet" href="css.css">
-    <style>
-      img {
-        max-width: 100%
-      }
-
-      section {
-        border: 1px solid #ccc;
-        padding: 0.1rem 1rem;
-        margin: 1rem 0;
-      }
-      header {
-        background-color: purple;
-        color: #fff;
-        border-radius: .25rem;
-        font-weight: 800;
-        text-decoration: none;
-        transform: scale(1);
-        transition: transform .1s ease-out;
-      }
-      footer a {
-        display: inline-flexbox;
-        padding: .5rem 1rem;
-        color: #fff;
-        background-color: peru;
-        border-radius: .25rem;
-        font-weight: 800;
-        text-decoration: none;
-        transform: scale(1);
-        transition: transform .1s ease-out;
-      }
-    </style>
+    <link rel="stylesheet" href="about_me.css">
   </head>
   <body>
     <header>
       <h1>
-        About me
+        ABOUT ME
       </h1>
     </header>
     <main>
-        <section>
-            <h2 style="color: blue;">
-                Who I am
-            </h2>
+      <section>
+        <div>
+          <img src="me.jpg" alt="this is who I am">
+        </div>
+      </section>
+      <section>
+          <h2>
+              Who I am
+          </h2>
+          <p>
             My name is Ratongamanahaja Francois Valentino Jacquit, the first son of Francois Jacquit and Rasoarinajaina Fanjarivelina. I am from Andilamena, but studying in Mahanoro. I'm twenty three years old now, born in 1996. I'm not really tall but not really short. For as I like keeping fit, I have a medium size, not really thin but not really fat. I've been studying for many years in my village, but I still keep studying at ONJA school now. I'm not good at writing and I'm not use to it but now I'm trying to take to it. I'm sorry if I still can't express myself perfectly, but that's all what I can tell you about myself.
-            <img src="me.jpg" alt="this is who I am">
-        </section>
-        <section>
-            <h2 style="color: blue;">
-                My favorite hobbies
-            </h2>
-            <ul>
-                <li>
-                    I am really keen on listening to music, not only to have fun, but also to make myself in a good temper when I have a problem or I am angry. But the most I spend my free time is reding books. I love reading because it helps me to improve my english, including my speaking and grammar. On top of that, it keeps my mind being awake to english, and also develops a broader vocabulary, increased general knowledge and a better understanding of other cultures. This is the most important, because english is easy to learn but easy to forget. So reading is a way to remind myself to use english all the time. It's also an opportunity to learn a new skills.
-                </li>
-                <li>
-                    Apart from that I like practicing sport. One of the main benefits of  doing this is to boost my physical and mental health. Moreover, sport helps me to learn time management and responsibility. According to this great saying <q>Healthy mind lives in a Healthy Body</q>. I fell better and comfortable after practicing sport and I always get enough sleep.
-                </li>
-            </ul>
-        </section>
+          </p>
+      </section>
+      <section>
+          <h2>
+              My favorite hobbies
+          </h2>
+          <ul>
+              <li>
+                  I am really keen on listening to music, not only to have fun, but also to make myself in a good temper when I have a problem or I am angry. But the most I spend my free time is reding books. I love reading because it helps me to improve my english, including my speaking and grammar. On top of that, it keeps my mind being awake to english, and also develops a broader vocabulary, increased general knowledge and a better understanding of other cultures. This is the most important, because english is easy to learn but easy to forget. So reading is a way to remind myself to use english all the time. It's also an opportunity to learn a new skills.
+              </li>
+              <li>
+                  Apart from that I like practicing sport. One of the main benefits of  doing this is to boost my physical and mental health. Moreover, sport helps me to learn time management and responsibility. According to this great saying <q>Healthy mind lives in a Healthy Body</q>. I fell better and comfortable after practicing sport and I always get enough sleep.
+              </li>
+          </ul>
+      </section>
     </main>
     <footer>
         <h3>
