--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
         <link rel="stylesheet" href="css.css">
         <style>
-            body {
+            /* body {
               font-family: sans-serif;
               font-size: 100%;
               margin: 0;
@@ -41,7 +41,7 @@
               text-decoration: none;
               transform: scale(1);
               transition: transform .1s ease-out;
-            }
+            } */
                 </style>
     </head>
     <body>
