--- a/blog.html
+++ b/blog.html
@@ -6,48 +6,7 @@
     <title>
       Blog
     </title>
-    <link rel="stylesheet" href="css.css">
-    <style>
-      body {
-    font-family: sans-serif;
-    font-size: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    max-width: 50rem;
-    margin: 0 auto;
-    text-align: center;
-    box-shadow: 0 0 35px rgba(0,0,0,.2);
-  }
-      header {
-          background-color: purple;
-          color: #fff;
-          border-radius: .25rem;
-          font-weight: 800;
-          text-decoration: none;
-          transform: scale(1);
-          transition: transform .1s ease-out;
-      }
-      main {
-    background-color: floralwhite;
-    color: aquamarine;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  footer a {
-    display: inline-flexbox;
-    padding: .5rem 1rem;
-    color: #fff;
-    background-color: peru;
-    border-radius: .25rem;
-    font-weight: 800;
-    text-decoration: none;
-    transform: scale(1);
-    transition: transform .1s ease-out;
-  }
-  </style>
+    <link rel="stylesheet" href="blog.css">
   </head>
   <body>
     <header>
