--- a/my-contact.html
+++ b/my-contact.html
@@ -8,7 +8,7 @@
     </title>
     <link rel="stylesheet" href="css.css">
     <style>
-        body {
+        /* body {
   font-family: sans-serif;
   font-size: 100%;
   margin: 0;
@@ -34,7 +34,7 @@
         text-decoration: none;
         transform: scale(1);
         transition: transform .1s ease-out;
-      }
+      } */
     </style>
   </head>
   <body>
