--- a/my_study_at_onja.html
+++ b/my_study_at_onja.html
@@ -8,7 +8,7 @@
     </title>
     <link rel="stylesheet" href="css.css">
     <style>
-        img {
+        /* img {
             max-width: 100%
         }
 
@@ -20,7 +20,7 @@
 
         section:target {
             border-color: blue;
-        }
+        } */
     </style>
   </head>
   <body>
