--- a/blog.html
+++ b/blog.html
@@ -15,38 +15,36 @@
       </h1>
     </header>
     <main>
-      <nav>
-        <h2>
+      <ul>
+        <li>
           <a href="my-first-blog.html">
-              MY FIRST BLOG
+              My First Blog
           </a>
-      </h2>
-        <h2>
-            <a href="my-family.html">
-                MY FAMILY
-            </a>
-        </h2>
-        <h2>
-            <a href="my_study_at_onja.html">
-                MY STUDY AT ONJA
-            </a>
-        </h2>
-        <h2>
+        </li>
+        <li>
+          <a href="my-family.html">
+              My Family
+          </a>
+        </li>
+        <li>
+          <a href="my_study_at_onja.html">
+              My Study At ONJA
+          </a>
+        </li>
+        <li>
           <a href="my-diary.html">
-              MY DIARY
+              My Diary
           </a>
-        </h2>
-        <h2>
+        </li>
+        <li>
           <a href="my-second-year.html">
-              MY SECOND YEAR 
+              My Second Year
           </a>
-        </h2>
+        </li>
+      </ul>
     </nav>
     </main>
     <footer>
-      <h3>
-        <a href="blog.html">Go back to blog→</a>
-      </h3>
       <h3>
         <a href="index.html">Go back to index→</a>
       </h3>
