using custom properties for the blog post

--- a/blog.html
+++ b/blog.html
@@ -18,27 +18,27 @@
       <ul>
         <li>
           <a href="my-first-blog.html">
-              My First Blog
+              My first blog
           </a>
         </li>
         <li>
           <a href="my-family.html">
-              My Family
+              My family
           </a>
         </li>
         <li>
           <a href="my_study_at_onja.html">
-              My Study At ONJA
+              My study at ONJA
           </a>
         </li>
         <li>
           <a href="my-diary.html">
-              My Diary
+              My diary
           </a>
         </li>
         <li>
           <a href="my-second-year.html">
-              My Second Year
+              My second year
           </a>
         </li>
       </ul>
